src/components/Skill/Skill.module.css
.skill {
  display: flex;
  flex-direction: column;
  gap: 5rem;
  padding: 5rem 0;
  align-items: center;
  background-color: rgb(0, 6, 26);
}

.allDevices,
.analytics,
.author,
.bot,
.mobile,
.research,
.team {
  display: flex;
  align-items: center;
  gap: 15rem;
  border-bottom: 0.2rem solid rgb(0, 204, 255);
  border-radius: 2rem;
  height: 100vh;
}

.info {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 3rem;
  padding: 0 2rem;
  width: 35rem;
  cursor: context-menu;
}

.info > h2 {
  font-size: 2rem;
  font-weight: 600;
  background: linear-gradient(
    90deg,
    rgb(0, 204, 255) 0%,
    rgb(0, 204, 255) 30%,
    white 50%,
    rgb(0, 204, 255) 70%,
    rgb(0, 204, 255) 100%
  );
  background-clip: text;
  background-size: 200% 200%;
  color: transparent;
  animation: gradient-animation 2s linear infinite reverse;
  transition: color 0.3s ease-in-out;
}

@keyframes gradient-animation {
  0% {
    background-position: 0% 50%;
  }
  100% {
    background-position: 200% 100%;
  }
}

.info > h2:hover {
  color: rgb(0, 204, 255);
  text-shadow: 2px 2px 5px rgb(90, 90, 90);
  animation-play-state: paused;
}

.info > p {
  text-align: justify;
}

.allDevices > svg {
  /* width: 45rem;
  height: 32rem; */
  width: 70vmin;
  height: 55vmin;
}

section.mobile {
  display: none;
}

.mobile > svg {
  /* width: 45rem;
  height: 33rem; */
  width: 70vmin;
  height: 55vmin;
}

.analytics {
  flex-direction: row-reverse;
}

.analytics > svg {
  /* width: 45rem;
  height: 35rem; */
  width: 70vmin;
  height: 60vmin;
}

section.bot {
  display: none;
}

.bot > svg {
  /* width: 45rem;
  height: 33rem; */
  width: 70vmin;
  height: 55vmin;
}

.team > svg {
  /* width: 45rem;
  height: 35rem; */
  width: 70vmin;
  height: 60vmin;
}

.author {
  flex-direction: row-reverse;
}

.author > svg {
  /* width: 45rem;
  height: 31rem; */
  width: 70vmin;
  height: 45vmin;
}

.research > svg {
  /* width: 45rem;
  height: 33rem; */
  width: 70vmin;
  height: 50vmin;
}

/* Education */
.education {
  align-self: stretch;
  display: flex;
  flex-direction: column;
  gap: 3rem;
  padding: 5vmin 15vmin;
  min-height: 100vh;
}

@media (max-width: 900px) {
  .education {
    gap: 3rem;
    padding: 2vmin 5vmin;
    min-height: 100vh;
  }
}

.eduSection {
  display: grid;
  grid-template: repeat(3, 15vmin) / repeat(auto-fit, minmax(35vmin, 50vmin));
  justify-content: center;
  gap: 2rem;
}

.eduSection > section {
  display: grid;
  grid-template: 1fr 2fr / 1fr 4fr;
  background-color: #333848;
  border-radius: 2rem;
  cursor: context-menu;
  transition: transform 0.2s ease-in-out;
}

.eduSection > section:hover {
  transform: scale(1.03);
}

.icon {
  grid-row: 1 / -1;
  grid-column: 1 / 2;
}

.context {
  display: flex;
  align-items: center;
  gap: 0.5rem;
  padding: 0 1rem;
  transform: translateY(1rem);
}

.context > span:first-child {
  font-size: 1rem;
  font-weight: 600;
  cursor: pointer;
}

.context > span:first-child:hover {
  border-bottom: 0.15rem solid rgb(0, 204, 255);
}

.context > span:nth-child(2) {
  font-size: 0.9rem;
}

.context > span:last-child {
  font-size: 1.5rem;
  font-weight: 600;
  color: rgb(0, 204, 255);
}

.eduBar {
  display: flex;
  align-items: center;
  gap: 1rem;
  padding: 0 1rem;
}

.eduBar > span:first-child {
  display: flex;
  height: 1rem;
  flex: 1;
  border: 0.15rem solid white;
  border-radius: 1rem;
  position: relative;
  overflow: hidden;
}

.fill {
  position: absolute;
  height: 100%;
  width: 0;
  background-color: rgb(0, 204, 255);
  border-radius: 1rem 0 0 1rem;
}

.odin1 .fill,
.uni .fill {
  animation: fill100 1.5s ease-in-out forwards;
}

@keyframes fill100 {
  80% {
    border-radius: 1rem 0 0 1rem;
  }
  to {
    background-color: rgb(0, 144, 180);
    border-radius: 1rem;
    width: 100%;
  }
}

.alx1 .fill {
  animation: fill75 1.5s ease-in-out forwards;
}

@keyframes fill75 {
  to {
    width: 75%;
  }
}

.alx2 .fill {
  animation: fill70 1.5s ease-in-out forwards;
}

@keyframes fill70 {
  to {
    width: 70%;
  }
}

.odin2 .fill {
  animation: fill15 1.5s ease-in-out forwards;
}

@keyframes fill15 {
  to {
    width: 15%;
  }
}

.eduBar > span:last-child {
  display: flex;
  align-items: center;
  gap: 0.2rem;
  font-size: 2rem;
  width: 6rem;
  font-weight: 600;
}

.percent {
  font-size: 1.5rem;
  font-weight: 500;
}

.education > h2 {
  font-size: 3rem;
  color: rgb(0, 204, 255);
  font-weight: 600;
  background: linear-gradient(
    90deg,
    rgb(0, 204, 255) 0%,
    rgb(0, 204, 255) 40%,
    white 50%,
    rgb(0, 204, 255) 60%,
    rgb(0, 204, 255) 100%
  );
  background-clip: text;
  background-size: 200% 200%;
  color: transparent;
  text-align: center;
}

.education > h2 {
  animation: gradient-animation 3.5s linear infinite reverse;
}

/* Technologies */
.technologies {
  align-self: stretch;
  display: flex;
  align-items: center;
  flex-direction: column;
  gap: 3rem;
  /* padding: 5rem 12rem; */
  height: 100vh;
}

.techSection {
  display: grid;
  grid-template: repeat(2, 1fr) / repeat(3, 1fr);
  justify-items: center;
  row-gap: 5rem;
  column-gap: 1rem;
  /* width: 80vmin; */
}

.tools {
  grid-row: 1 / 2;
  grid-column: 1 / -1;
  max-width: 80vmin;
}

.languages,
.frontEnd,
.backEnd {
  max-width: 30vmin;
}

.techSection > section {
  display: flex;
  flex-direction: column;
  /* width: fit-content; */
  /* overflow: hidden; */
}

.langSection,
.toolSection,
.frontSection,
.backSection {
  display: flex;
  gap: 4.45vmin;
  overflow: hidden;
  white-space: nowrap;
  position: relative;
  mask-image: linear-gradient(
    to right,
    transparent 0%,
    black 10%,
    black 90%,
    transparent 100%
  );
}

.langSection,
.frontSection,
.backSection {
  max-width: 20rem;
}

.langSection > section,
.toolSection > section,
.frontSection > section,
.backSection > section {
  display: flex;
  gap: 4.45vmin;
  white-space: nowrap;
  padding: 5vmin 0;
}

.langSection > section,
.frontSection > section,
.backSection > section {
  animation: scrollShort 10s linear infinite;
}

@keyframes scrollShort {
  0% {
    transform: translateX(0);
  }
  to {
    transform: translate(-113%);
  }
}

.toolSection > section {
  animation: scrollLong 30s linear infinite;
}

@keyframes scrollLong {
  0% {
    transform: translateX(0);
  }
  to {
    transform: translate(-103.5%);
  }
}

.langSection:hover > section,
.toolSection:hover > section,
.frontSection:hover > section,
.backSection:hover > section {
  animation-play-state: paused;
}

.toolSection {
  max-width: 69rem;
}

.langSection > section,
.toolSection > section,
.toolSection > section,
.frontSection > section,
.backSection > section {
  flex-shrink: 0;
}

.techSection h3,
.technologies > h2 {
  font-weight: 600;
  background: linear-gradient(
    90deg,
    rgb(0, 204, 255) 0%,
    rgb(0, 204, 255) 40%,
    white 50%,
    rgb(0, 204, 255) 60%,
    rgb(0, 204, 255) 100%
  );
  background-clip: text;
  background-size: 200% 200%;
  color: transparent;
  text-align: center;
  animation: gradient-animation 3s linear infinite reverse;
}

.technologies h2:hover,
.technologies h3:hover {
  color: rgb(0, 204, 255);
  text-shadow: 2px 2px 5px rgb(90, 90, 90);
  animation-play-state: paused;
}

.technologies h3,
.technologies h2 {
  cursor: context-menu;
}

.techSection h3 {
  font-size: 2rem;
}

.technologies > h2 {
  font-size: 3rem;
}

.techSection svg,
.techSection img {
  width: 7vmin;
  height: 7vmin;
  filter: grayscale(100%);
  transition: transform 0.3s ease-in-out;
}

.techSection svg:hover,
.techSection img:hover {
  transform: scale(1.15);
  filter: grayscale(0);
}

.iconContainer {
  position: relative;
}

.box::after {
  position: absolute;
  font-size: 1rem;
  font-weight: 600;
  bottom: -2.2rem;
  bottom: -1rem;
  left: 50%;
  transform: translate(-50%, -50%);
  color: rgba(255, 255, 255, 0.6);
  opacity: 0;
  transition: opacity 0.5s ease-in-out, bottom 0.3s ease-in-out;
}

.box:hover::after {
  opacity: 1;
  bottom: -2.3rem;
}

.jsBox::after {
  content: "JavaScript";
}

.cBox::after {
  content: "C";
}

.pythonBox::after {
  content: "Python";
}

.htmlBox::after {
  content: "HTML";
}

.cssBox::after {
  content: "CSS";
}

.reactBox::after {
  content: "React";
}

.nodeBox::after {
  content: "NodeJS";
}

.mongoBox::after {
  content: "MongoDB";
}

.expressBox::after {
  content: "ExpressJS";
}

.vsCodeBox::after {
  content: "VS Code";
}

.gitBox::after {
  content: "Git";
}

.githubBox::after {
  content: "GitHub";
}

.webpackBox::after {
  content: "Webpack";
}

.viteBox::after {
  content: "Vite";
}

.npmBox::after {
  content: "NPM";
}

.babelBox::after {
  content: "Babel";
}

.eslintBox::after {
  content: "ESLint";
}

.vercelBox::after {
  content: "Vercel";
}

.jestBox::after {
  content: "Jest";
}

@media (max-width: 1600px) {
  .allDevices,
  .analytics,
  .author,
  .bot,
  .mobile,
  .research,
  .team {
    gap: 4rem;
  }
}

@media (max-width: 1400px) {
  .allDevices,
  .analytics,
  .author,
  .bot,
  .mobile,
  .research,
  .team {
    display: flex;
    flex-direction: column;
    padding-bottom: 5rem;
    height: 100%;
  }
}

@media (max-width: 1300px) {
}

